# r2_planning

./: r2_planning.rosinstall
moveit_ompl_planning_plugins/moveit_ompl_constrained_interface/: CMakeLists.txt  ompl_constrained_planning_plugin_description.xml  package.xml
moveit_ompl_planning_plugins/moveit_ompl_constrained_interface/include/moveit_ompl_constrained_interface/: ConstrainedPlanningContext.h  OMPLConstraint.h
moveit_ompl_planning_plugins/moveit_ompl_constrained_interface/src/: ConstrainedPlanningContext.cpp
moveit_ompl_planning_plugins/moveit_ompl_fixed_pose_interface/: CMakeLists.txt  ompl_fixed_pose_planning_plugin_description.xml  package.xml
moveit_ompl_planning_plugins/moveit_ompl_fixed_pose_interface/include/moveit_ompl_fixed_pose_interface/: GeometricFixedPosePlanningContext.h
moveit_ompl_planning_plugins/moveit_ompl_fixed_pose_interface/src/: GeometricFixedPosePlanningContext.cpp
moveit_ompl_planning_plugins/moveit_ompl_pose_constraint_interface/: CMakeLists.txt  README.txt  package.xml
moveit_ompl_planning_plugins/moveit_ompl_pose_constraint_interface/include/moveit_ompl_interpolation_interface/: GeometricPoseConstraintPlanningContext.h
moveit_ompl_planning_plugins/moveit_ompl_pose_constraint_interface/include/moveit_ompl_pose_constraint_interface/: GeometricPoseConstraintPlanningContext.h
moveit_ompl_planning_plugins/moveit_ompl_pose_constraint_interface/src/: GeometricPoseConstraintPlanningContext.cpp
moveit_ompl_planning_plugins/ompl_components/: CMakeLists.txt  package.xml
moveit_ompl_planning_plugins/ompl_components/include/moveit_ompl_components/: CartesianDistanceOptimizationObjective.h  CartesianDistancePathSimplifier.h  CartesianSpaceInterpolator.h  CollisionGroupAABBFCL.h  CollisionRobotGroup.h  GoalSamplingPathSimplifier.h  GroupClearanceOptimizationObjective.h  LinearMotionValidator.h  SubdivisionMotionValidator.h  TorsoDeclinationOptimizationObjective.h
moveit_ompl_planning_plugins/ompl_components/include/ompl/geometric/planners/casper/: CASPER.h  CasperDiscretization.h
moveit_ompl_planning_plugins/ompl_components/include/ompl/geometric/planners/hilo/: BiHiLo.h  HiLo.h  HiLoDecomposition.h  HiLoPoseDecomposition.h  XXL.h  XXLDecomposition.h  XXLPositionDecomposition.h
moveit_ompl_planning_plugins/ompl_components/include/ompl/geometric/planners/rlrt/: BiRLRT.h  RLRT.h
moveit_ompl_planning_plugins/ompl_components/include/ompl/geometric/planners/rrt/: LazyTRRT.h
moveit_ompl_planning_plugins/ompl_components/src/: CartesianDistanceOptimizationObjective.cpp  CartesianDistancePathSimplifier.cpp  CartesianSpaceInterpolator.cpp  GoalSamplingPathSimplifier.cpp  LinearMotionValidator.cpp  SubdivisionMotionValidator.cpp  TorsoDeclinationOptimizationObjective.cpp
moveit_ompl_planning_plugins/ompl_components/src/planners/: AdjacencyList.cpp  BiHiLo.cpp  BiRLRT.cpp  CASPER.cpp  HiLo.cpp  HiLoPoseDecomposition.cpp  LazyTRRT.cpp  RLRT.cpp  XXL.cpp  XXLPositionDecomposition.cpp
moveit_ompl_planning_plugins/r2_ompl_planning_interface/: CMakeLists.txt  package.xml  r2_ompl_planning_plugin_description.xml
moveit_ompl_planning_plugins/r2_ompl_planning_interface/include/r2_ompl_planning_interface/: R2GeometricPlanningContext.h  R2HiloPoseDecomposition.h  R2XXLPositionDecomposition.h
moveit_ompl_planning_plugins/r2_ompl_planning_interface/src/: R2GeometricPlanningContext.cpp  R2XXLPositionDecomposition.cpp
r2_benchmark/: CMakeLists.txt  package.xml
r2_benchmark/benchmark/: iss_climbing.yaml  iss_step1.yaml  iss_step2.yaml  iss_step3.yaml  iss_with_arm_obs_1.yaml  iss_with_arm_obs_2.yaml
r2_benchmark/launch/: iss_climbing_benchmark.launch  make_db.launch  step1.benchmark.launch  step1_arm_obs.benchmark.launch  step2.benchmark.launch  step2_arm_obs.benchmark.launch  step3.benchmark.launch
r2_benchmark/src/: iss_climbing_benchmark.cpp  iss_climbing_benchmark_arms.cpp  make_database.cpp
r2_moveit_plugins/moveit_r2_constraint_sampler/: CMakeLists.txt
r2_moveit_plugins/moveit_r2_constraint_sampler/include/moveit_r2_constraints/: r2_constraint_sampler.h
r2_moveit_plugins/moveit_r2_constraint_sampler/src/: r2_constraint_sampler.cpp
r2_moveit_plugins/moveit_r2_kinematics/interface/: CMakeLists.txt
r2_moveit_plugins/moveit_r2_kinematics/interface/src/: r2_tree_kinematics_interface.cpp
r2_moveit_plugins/moveit_r2_kinematics/plugin/: CMakeLists.txt
r2_moveit_plugins/moveit_r2_pose_sampler/src/: r2_pose_sampler.cpp
r2_planning/: CMakeLists.txt  package.xml
r2_planning_demos/: CMakeLists.txt  package.xml
r2_planning_demos/include/r2_planning_demos/: argos_poses.h
r2_planning_demos/launch/: rviz_iss.launch
r2_planning_demos/src/: argos_demo.cpp  executor.cpp  iss_navigation.cpp  localizer.cpp  planning_server.cpp
r2_planning_demos/world/: argos.world.yaml  iss_navigation.world.yaml
r2_planning_interface/: CMakeLists.txt
r2_planning_interface/include/r2_planning_interface/: R2Interface.h  R2Poses.h
r2_planning_interface/src/: R2Interface.cpp
r2_planning_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r2_planning_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics (copy).yaml  kinematics.yaml  ompl_planning.yaml  r2.srdf
r2_planning_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_new_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  r2_moveit_controller_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
r2_planning_msgs/: CMakeLists.txt
r2_planning_msgs/msg/: R2PlanRequest.msg  R2PlanResponse.msg
r2_planning_msgs/srv/: R2SimplePlanRequest.srv
r2_rviz_planning_interface/: CMakeLists.txt  package.xml
r2_rviz_planning_interface/src/: RVizPlanningInterface.cpp
r2_simplified_urdf/: CMakeLists.txt  README  package.xml  r2c6_legs_only_creepy.xacro
(+3 files in other folders)
