<package>
  <name>r2_benchmark</name>
  <version>0.0.1</version>
  <description>r2_benchmark</description>
  <maintainer email="rluna@rice.edu">Ryan Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>r2_planning_interface</build_depend>
  <build_depend>moveit_benchmarks</build_depend>

  <!-- <run_depend>r2_planning_interface</run_depend> -->
  <run_depend>moveit_benchmarks</run_depend>

</package>
