<package>
  <name>moveit_ompl_constrained_interface</name>
  <version>0.1.0</version>
  <description>Interface for OMPL_Constraints library and MoveIt</description>
  <author email="rluna@rice.edu">Ryan Luna</author>
  <maintainer email="rluna@rice.edu">Ryan Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ompl_source</build_depend>
  <build_depend>ompl_constraints</build_depend>
  <build_depend>moveit_ompl_planning_interface</build_depend>

  <run_depend>ompl_source</run_depend>
  <run_depend>ompl_constraints</run_depend>
  <run_depend>moveit_ompl_planning_interface</run_depend>

  <export>
    <moveit_ompl_planning_interface plugin="${prefix}/ompl_constrained_planning_plugin_description.xml"/>
  </export>

</package>
