<package>
  <name>moveit_ompl_pose_constraint_interface</name>
  <version>0.1.0</version>
  <description>Interface for OMPL planning with a single pose constraint</description>
  <author email="rluna@rice.edu">Ryan Luna</author>
  <maintainer email="rluna@rice.edu">Ryan Luna</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ompl_source</build_depend>
  <build_depend>moveit_ompl_planning_interface</build_depend>
  <build_depend>moveit_r2_kinematics</build_depend>

  <run_depend>ompl_source</run_depend>
  <run_depend>moveit_ompl_planning_interface</run_depend>
  <run_depend>moveit_r2_kinematics</run_depend>

  <export>
    <moveit_ompl_planning_interface plugin="${prefix}/ompl_pose_constraint_planning_plugin_description.xml"/>
  </export>

</package>
